tests/testcases/errors/BCE0058-1.boo
"""
BCE0058-1.boo(7,15): BCE0058: Object required.
BCE0058-1.boo(10,15): BCE0058: Object required.
"""
class Foo:
	static def constructor():
		print self
		
	static def bar():
		print self
